tests/e2e/service_call_as_output4b.error
Error: syntax error in story at line 1, column 22

1|    a = uuid generate to t
                           ^

E0041: `t` is not allowed here
